--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Zevioo</string>
+    <string name="start_subtitle">Reviews just for you.</string>
+    <string name="start_register">Sign up with email</string>
+    <string name="start_login">Already a member?</string>
+    <string name="start_page_0_title">Check out thousands of genuine &amp; useful reviews.</string>
+    <string name="start_page_1_title">Discover amazing products just for you.</string>
+    <string name="start_page_2_title">Share your experiences, get fans &amp; followers.</string>
 </resources>
