--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -5,4 +5,22 @@
     <string name="start_page_0_title">Δείτε αληθινές &amp; χρήσιμες αξιολογήσεις.</string>
     <string name="start_page_1_title">Ανακαλύψτε που προϊόντα που σας ταιριάζουν απόλυτα!</string>
     <string name="start_page_2_title">Μοιραστείτε εμπειρίες &amp; αποκτήστε οπαδούς.</string>
+
+    <string name="registration_nick">Επιλέξτε ένα ψευδώνυμο</string>
+    <string name="registration_desc">δύο λόγια για εσάς (π.χ. food passionate, wine lover)</string>
+    <string name="registration_pass">Κωδικός</string>
+    <string name="registration_male">Άντρας</string>
+    <string name="registration_female">Γυναίκα</string>
+    <string name="password_explain">Ο κωδικός που θα επιλέξετε πρέπει να έχει τουλάχιστον 8 χαρακτήρες</string>
+    <string name="registrations_terms">Έχω διαβάσει την Πολιτική Απορρήτου και αποδέχομαι τους Όρους Χρήσης.</string>
+    <string name="registration_dob">Ημερομηνία γέννησης</string>
+
+
+    <string name="login_forgot_pass">Ξέχασα τον κωδικό μου.</string>
+
+
+
+    <!-- Menus -->
+    <string name="menu_register">Εγγραφή</string>
+    <string name="menu_login">Σύνδεση</string>
 </resources>
