--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,22 @@
     <string name="start_page_0_title">Check out thousands of genuine &amp; useful reviews.</string>
     <string name="start_page_1_title">Discover amazing products just for you.</string>
     <string name="start_page_2_title">Share your experiences, get fans &amp; followers.</string>
+
+    <string name="registration_nick">Select a Nickname</string>
+    <string name="registration_desc">2 words about you (e.g. food passionate, wine lover)</string>
+    <string name="registration_pass">Password</string>
+    <string name="registration_email">Email</string>
+    <string name="registration_male">Man</string>
+    <string name="registration_female">Woman</string>
+    <string name="password_explain">Your password must be at least 8 characters</string>
+    <string name="registrations_terms">I have read the Privacy Policy and agree to the Terms of Service.</string>
+    <string name="registration_dob">Date of birth</string>
+
+
+    <string name="login_forgot_pass">Forgot my password.</string>
+
+
+    <!-- Menus -->
+    <string name="menu_register">Sign up</string>
+    <string name="menu_login">Sign in</string>
 </resources>
