added GDPR settings

--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -18,15 +18,56 @@
     <string name="validate_text1">Μόλις αποστείλαμε ένα 4-ψήφιο κωδικό στο email που δηλώσατε στο προηγούμενο βήμα.</string>
     <string name="validate_text2">Θυμηθείτε να χρησιμοποιείτε αυτό το email όταν κάνετε αγορές online για να μπορούμε να συνδέουμε τα προϊόντα που δοκιμάζετε και να σας δίνουμε τη δυνατότητα να τα αξιολογείτε ως “Επιβεβαιωμένες αγορές”. Τέτοιες αξιολογήσεις είναι πιο αξιόπιστες και προσελκύουν περισσότερους followers. Αν έχετε κι άλλο email που χρησιμοποιείτε, μπορείτε να τον προσθέσετε μέσα από το Προφίλ σας. </string>
     <string name="validate_title">Βάλτε τον κωδικό που σας αποστείλαμε σε email.</string>
+    <string name="gdpr_main_text">Αποθηκεύουμε και επεξεργαζόμαστε τα προσωπικά σας δεδομένα, σύμφωνα με τις τελευταίες κοινοτικές οδηγίες (GDPR), για να σας προσφέρουμε εξατομικευμένο περιεχόμενο και υπηρεσίες. Εργαζόμαστε με τους συνεργάτες διαφημίσεών μας, ώστε να βελτιώνουμε συνεχώς τις προσαρμοσμένες προτάσεις που σας στέλνουμε. Έχετε ανά πάσα στιγμή τον απόλυτο έλεγχο στα δεδομένα σας.</string>
+    <string name="gdpr_main_action1">OK. Συναινώ</string>
+    <string name="gdpr_main_action2">Ρυθμίσεις Απορρήτου</string>
+    <string name="gdpr_result">Αποδοχή όλων</string>
+    <string name="gdpr_configuration_title">Απόρρητο</string>
+    <string name="gdpr_configuration_text">Συλλέγουμε και επεξεργαζόμαστε σύμφωνα με τις τελευταίες κοινοτικές οδηγίες (GDPR) τα παρακάτω προσωπικά σας δεδομένα, για να σας προσφέρουμε εξατομικευμένες υπηρεσίες. Αν όμως το επιθυμείτε, μπορείτε να περιορίσετε τη χρήση των προσωπικών σας δεδομένων και να λαμβάνετε γενικευμένες προτάσεις.</string>
+
+    <string name="gdpr_preferences_title">Προτιμήσεις</string>
+    <string name="gdpr_reviews_title">Αξιολογήσεις</string>
+    <string name="gdpr_purchases_title">Αγορές &amp; Επαφές</string>
+
+    <string name="gdpr_dialog_title">Σίγουρα;</string>
+    <string name="gdpr_dialog_message">Η απενεργοποίησή του θα καταστήσει τις προτάσεις που βλέπετε λιγότερο σχετικές, ενώ όλα τα δεδομένα σας μέχρι τώρα θα διαγραφούν.</string>
+    <string name="gdpr_dialog_ok">Ναι, Είμαι βέβαιος</string>
+    <string name="gdpr_dialog_no">Ακύρωση</string>
 
     <string name="login_forgot_pass">Ξέχασα τον κωδικό μου.</string>
 
+    <!-- GDPR preferences -->
+    <string name="a1_title">Κατηγορίες ενδιαφέροντος</string>
+    <string name="a1_description">Αν απενεργοποιήσετε αυτή την επιλογή θα λαμβάνετε προτάσεις για όλες τις κατηγορίες ανεξαιρέτως.</string>
+    <string name="a2_title">Αγαπημένα</string>
+    <string name="a2_description">Αν απενεργοποιήσετε αυτή την επιλογή δεν θα μπορείτε να αποθηκεύετε προϊόντα που σας αρέσουν.</string>
+    <string name="a3_title">Επιπλέον στοιχεία Προφίλ</string>
+    <string name="a3_description">Το zevioo χρησιμοποιεί τεχνολογία ΑΙ για να εξατομικεύει κάθε πρόταση με βάση τα ιδιαίτερα χαρακτηριστικά σας. Αν απενεργοποιήσετε αυτή τη ρύθμιση θα λαμβάνετε γενικευμένες προτάσεις.</string>
+    <string name="a4_title">Μέλη που ακολουθώ</string>
+    <string name="a4_description">Αν απενεργοποιήσετε αυτήν την επιλογή δεν θα μπορείτε να ακολουθείτε συγκεκριμένους χρήστες ενώ τα δεδομένα των χρηστών που ακολουθείτε τώρα θα διαγραφούν.</string>
+    <string name="a5_title">Κοινοποίηση δεδομένων</string>
+    <string name="a5_description">Αυτή η ρύθμιση επιτρέπει στο zevioo να μοιράζεται ορισμένα προσωπικά σας δεδομένα (τα οποία δεν σας ταυτοποιούν), όπως το ποια προϊόντα σας αρέσουν και ποια όχι, με άλλα μέλη και συνεργαζόμενες εταιρίες.</string>
+    <!-- GDPR reviews -->
+    <string name="b1_title">Βαθμολογία &amp; σχόλια</string>
+    <string name="b1_description">Αν απενεργοποιήσετε αυτή την επιλογή δεν θα μπορείτε να αξιολογήσετε προϊόντα. Έτσι, δεν θα ξέρουμε τι σας αρέσει και τι όχι για να σας στέλνουμε εξατομικευμένες προτάσεις.</string>
+    <string name="b2_title">Χρήσιμο ή όχι</string>
+    <string name="b2_description">Αν απενεργοποιήσετε αυτή την επιλογή δεν θα μπορείτε να δηλώνετε αν θεωρείτε χρήσιμη κάποια αξιολόγηση ή πρόταση. Έτσι, δεν θα ξέρουμε τι σας αρέσει και τι όχι για να σας στέλνουμε εξατομικευμένες προτάσεις.</string>
+    <string name="b3_title">Επικοινωνία με μέλη</string>
+    <string name="b3_description">Αν απενεργοποιήσετε αυτήν την επιλογή δεν θα μπορείτε να επικοινωνήστε με τα υπόλοιπα μέλη μέσω προσωπικών μηνυμάτων.</string>
+    <string name="b4_title">Κοινοποίηση δεδομένων</string>
+    <string name="b4_description">Αυτή η ρύθμιση επιτρέπει στο zevioo να μοιράζεται ορισμένα προσωπικά σας δεδομένα (τα οποία δεν σας ταυτοποιούν), όπως η βαθμολογίες με τα σχόλιά σας για προϊόντα και οι φωτογραφίες που ανεβάζετε, με άλλα μέλη και συνεργαζόμενες εταιρίες.</string>
+    <!-- GDPR purchases -->
+    <string name="c1_title">Στοιχεία αγορών</string>
+    <string name="c1_description">Συλλέγουμε και επεξεργαζόμαστε στοιχεία αγορών σας από συνεργαζόμενα καταστήματα ώστε να επιλέξουμε τα προϊόντα που θα σας προτείνουμε να αξιολογήσετε. Αν απενεργοποιήσετε αυτή την επιλογή δεν θα σας στέλνουμε email αξιολόγησης. Οι αξιολογήσεις σας θα εμφανίζονται ως “Μη Επιβεβαιωμένη Αγορά” ακόμη και αν έχετε αγοράσει το προϊόν που αξιολογείτε.</string>
+    <string name="c2_title">Στοιχεία επαφών</string>
+    <string name="c2_description">Συλλέγουμε στοιχεία επικοινωνίας των φίλων σας ώστε να μπορείτε να τους προσκαλέσετε στην κοινότητα του zevioo και να ακολουθούν τις δημοσιοποιήσεις σας. Αν απενεργοποιήσετε αυτήν την επιλογή δεν θα προσκαλέσετε φίλους ενώ όλα τα στοιχεία που έχουμε ήδη θα διαγραφούν.</string>
 
 
     <!-- Menus -->
     <string name="menu_register">Εγγραφή</string>
     <string name="menu_login">Σύνδεση</string>
     <string name="menu_next">Επόμενο</string>
+    <string name="menu_done">Τέλος</string>
     <!-- Permissions -->
     <string name="ok">OK</string>
     <string name="cancel">ΑΚΥΡΩΣΗ</string>
