added personalization activity

--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -18,6 +18,8 @@
     <string name="validate_text1">Μόλις αποστείλαμε ένα 4-ψήφιο κωδικό στο email που δηλώσατε στο προηγούμενο βήμα.</string>
     <string name="validate_text2">Θυμηθείτε να χρησιμοποιείτε αυτό το email όταν κάνετε αγορές online για να μπορούμε να συνδέουμε τα προϊόντα που δοκιμάζετε και να σας δίνουμε τη δυνατότητα να τα αξιολογείτε ως “Επιβεβαιωμένες αγορές”. Τέτοιες αξιολογήσεις είναι πιο αξιόπιστες και προσελκύουν περισσότερους followers. Αν έχετε κι άλλο email που χρησιμοποιείτε, μπορείτε να τον προσθέσετε μέσα από το Προφίλ σας. </string>
     <string name="validate_title">Βάλτε τον κωδικό που σας αποστείλαμε σε email.</string>
+    <string name="registration_deletion">Είστε σίγουτοι ότι θέλετε να ακυρώσετε την διαδικασία εγγραφής; Όλα τα στοιχεία σας θα διαγραφούν.</string>
+    <string name="validation_warning">Προσοχή</string>
     <string name="gdpr_main_text">Αποθηκεύουμε και επεξεργαζόμαστε τα προσωπικά σας δεδομένα, σύμφωνα με τις τελευταίες κοινοτικές οδηγίες (GDPR), για να σας προσφέρουμε εξατομικευμένο περιεχόμενο και υπηρεσίες. Εργαζόμαστε με τους συνεργάτες διαφημίσεών μας, ώστε να βελτιώνουμε συνεχώς τις προσαρμοσμένες προτάσεις που σας στέλνουμε. Έχετε ανά πάσα στιγμή τον απόλυτο έλεγχο στα δεδομένα σας.</string>
     <string name="gdpr_main_action1">OK. Συναινώ</string>
     <string name="gdpr_main_action2">Ρυθμίσεις Απορρήτου</string>
